# graph-coloring

./: CMakeLists.txt  README.md
include/canvas/: Canvas.hpp
include/edge/: edge.hpp
include/graph/: Graph.hpp
include/vertex/: Vertex.hpp
src/: main.cpp
src/canvas/: canvas.cpp
src/edge/: edge.cpp
src/graph/: graph.cpp  graph.cpp.bak
src/vertex/: vertex.cpp
